fixed budget alignment

--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,14 @@ button:hover {
     }
 }
 
+label.filterFormTitle{
+    text-align: left; 
+}
+
+label{
+    text-align: left;
+}
+
 #input-container {
     display: flex;
     flex-direction: column;
@@ -193,27 +201,28 @@ button:hover {
     padding: 50px;
     border-bottom: 1px, solid #E8E8E8;
     padding-left: 120px;
+    text-align: left;
 }
 
 .row-1 {
     display: flex;
     flex-direction: row;
+    text-align: left;
 }
 
 .row-2 {
     display: flex;
     flex-direction: row;
+    text-align: left;
 }
 
 .column-one {
     flex-direction: column;
-    width: 20%;
     margin-right: 30px;
 }
 
 .column-two {
     flex-direction: column;
-    width: 20%;
 }
 
 #languagesLabel {
